# memockpackage

./: LICENSE  README.md  pyproject.toml  setup.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/source/: conf.py  index.rst  intro.rst  mock_modules.rst  module2.rst
mock_modules/: __init__.py  module1.py  module2.py
tests/: test_module1.py  test_module2.py  try_import.py
