[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mock_modules"
version = "0.0.1"
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Example Author", email="author@example.com" },
]

classifiers = [
    'Development Status :: 3 - Alpha',
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=1.25.1",
]

[project.urls]
"Homepage" = "https://github.com/ganglix/memockpackage"
"Documentation" = "https://github.com/ganglix/memockpackage"